--- a/src/app/displayBox/display.style.css
+++ b/src/app/displayBox/display.style.css
@@ -167,7 +167,7 @@ html, body {
     padding: 0px;
 }
 
-.input-box textarea
+.input-box input
 {
     width: 100%;
     height: 100%;
@@ -178,6 +178,8 @@ html, body {
     padding: 10px;
     overflow-y: scroll;
 }
-
+.input-box input:focus {
+    outline: none;
+}
 
 
